--- a/index.html
+++ b/index.html
@@ -1,3 +1,202 @@
-<html>
-    Hi guys!! I'm John.
-</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Official website for The John Bot.">
+    <meta name="author" content="Josh Seides">
+    <meta name="keywords" content="John Bot">
+
+    <title>Home | The John Bot</title>
+
+    <!-- Custom CSS -->
+    <link href="http://joshseides.com/css/bootstrap.css" rel="stylesheet">
+    <link href="http://joshseides.com/css/menu.css" rel="stylesheet">
+    <link href="http://joshseides.com/css/style.css" rel="stylesheet">
+    <link href="http://joshseides.com/css/home-style.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="http://joshseides.com/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:200,400,700" rel="stylesheet" type="text/css">
+
+    <!--[if lt IE 9]>
+    <script src="http://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+
+<!-- Nav Menu -->
+
+<div id="header" class="nav-header">
+    <div class="container">
+        <div id="cssmenu">
+            <ul>
+                <li class="header-nav active"><a href="index.html">The John Bot</a></li>
+                <li><a href="http://joshseides.com/html/about.html">About</a></li>
+                <li><a href="http://joshseides.com/html/business.html">Business</a></li>
+            </ul>
+
+            <a href="https://www.facebook.com/johnbot" class="buy-btn pull-right" target="_blank"><i class="fa fa-fw fa-facebook" id="social1"></i></a>
+
+        </div>
+    </div>
+</div>
+
+<div class="space"></div>
+
+<div class="jumbotron">
+    <a href="#" class="btn btn-primary close-btn pull-right"><i class="fa fa-times"></i></a><br>
+    <h1>Freelance Web Design</h1>
+    <p>Low-cost, high-impact web design. See my portfolio and range of offerings.</p>
+    <p><a class="btn btn-primary quote" href="html/coding.html" role="button">Free Quote</a></p>
+</div>
+
+<!-- Header -->
+<header class="intro-screen">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 summary-info">
+                <h1>Josh Seides</h1>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="img/icons/light-bulb.png">
+                    </div>
+                    <div class="col-md-8">
+                        <h3>entrepreneur</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="img/icons/seo-tag.png">
+                    </div>
+                    <div class="col-md-8">
+                        <h3>programmer</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="img/icons/speech-bubble.png">
+                    </div>
+                    <div class="col-md-8">
+                        <h3>writer</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- About Section -->
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-image">
+                            <i class="fa fa-map-marker fa-5x"></i>
+                        </div>
+                        <div class="timeline-button">
+                            <a href="html/about.html" class="btn btn-primary pull-right"><i class="fa fa-plus plus-icon"></i></a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>Boston, MA</h3>
+                                <h4 class="subheading">Location</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">I currently study at Harvard University in Cambridge, MA (potentially concentrating in Economics and Computer Science). I'm originally from Alpharetta, GA. Click to learn more about me.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <i class="fa fa-line-chart fa-5x"></i>
+                        </div>
+                        <div class="timeline-button">
+                            <a href="html/business.html" class="btn btn-primary pull-left" id="leftElement1"><i class="fa fa-plus plus-icon"></i></a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>180K+</h3>
+                                <h4 class="subheading">Nonprofit Impact (Technocademy)</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Technocademy is a 501(c)(3) nonprofit I started in my freshman year of high school to help senior citizens and veterans. Click to see my past and current entrepreneurial endeavors.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <i class="fa fa-user fa-5x"></i>
+                        </div>
+                        <div class="timeline-button">
+                            <a href="html/writing.html" class="btn btn-primary pull-right"><i class="fa fa-plus plus-icon"></i></a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>18</h3>
+                                <h4 class="subheading">Current Age</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">From an early age, I have always believed in the power of youth to innovate and change the world. I have written many articles for major business publications on youth entrepreneurship, startups, and beyond. Click to read some of my work.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <i class="fa fa-code fa-5x"></i>
+                        </div>
+                        <div class="timeline-button">
+                            <a href="html/coding.html" class="btn btn-primary pull-left" id="leftElement2"><i class="fa fa-plus plus-icon"></i></a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>JavaScript + Angular 2</h3>
+                                <h4 class="subheading">Top Languages</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Programming has become one of my main focuses, both front-end and back-end. Currently, I work in HTML/CSS, JavaScript (with many frameworks including Angular, jQuery, React), nodeJS, and Java. I'm currently working on learning Ruby and ASP .NET.</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="speech-video">
+    <h1>Featured: My Graduation Speech</h1>
+    <iframe src="https://www.youtube.com/embed/4X7345zXevE" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<!-- Footer -->
+<footer class="text-center" style="margin-top: 0">
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="https://www.linkedin.com/in/josh-seides-852170ab">Website Design by Josh Seides</a>, &copy; 2017
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- Scripts -->
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script src="http://joshseides.com/js/bootstrap.js"></script>
+<script src="http://joshseides.com/js/menu.js"></script>
+<script src="http://joshseides.com/js/cbpAnimatedHeader.js"></script>
+<script src="http://joshseides.com/js/classie.js"></script>
+<script src="http://joshseides.com/js/button-fix.js"></script>
+
+</body>
