--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>Home | The John Bot</title>
 
     <!-- Custom CSS -->
-    <link href="http://joshseides.com/css/bootstrap.css" rel="stylesheet">
-    <link href="http://joshseides.com/css/menu.css" rel="stylesheet">
-    <link href="http://joshseides.com/css/style.css" rel="stylesheet">
-    <link href="http://joshseides.com/css/home-style.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/menu.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/home-style.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="http://joshseides.com/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:200,400,700" rel="stylesheet" type="text/css">
@@ -193,10 +193,10 @@
 
 <!-- Scripts -->
 <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-<script src="http://joshseides.com/js/bootstrap.js"></script>
-<script src="http://joshseides.com/js/menu.js"></script>
-<script src="http://joshseides.com/js/cbpAnimatedHeader.js"></script>
-<script src="http://joshseides.com/js/classie.js"></script>
-<script src="http://joshseides.com/js/button-fix.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/cbpAnimatedHeader.js"></script>
+<script src="js/classie.js"></script>
+<script src="js/button-fix.js"></script>
 
 </body>
